your code reviewed , follow my comment

--- a/JavaScript/birthday.html
+++ b/JavaScript/birthday.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- change default title -->
     <title>Document</title>
   </head>
   <body>
-    <input id="bYear" />
+    <!-- //add type and placeHolder attribute -->
+    <input id="bYear" /> 
     <button onclick="getData()">click</button>
     <p id="age"></p>
 
