reviewed by mentor Ashrafipour

--- a/JavaScript/birthday.html
+++ b/JavaScript/birthday.html
@@ -18,7 +18,7 @@
         document.getElementById("age").innerHTML = age;
       }
       function calcAge(bYear) {
-        const currentYear = 1400;
+        var currentYear = 1400;
         var age = currentYear - bYear;
         return age;
       }
