--- a/JavaScript/VAT/VAT.html
+++ b/JavaScript/VAT/VAT.html
@@ -10,41 +10,131 @@
       href="https://fonts.googleapis.com/css2?family=Markazi+Text&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+
     <link rel="stylesheet" href="style.css" />
-    <title>Value Added Tax</title>
+    <title>calculating site</title>
   </head>
   <body dir="rtl">
-    <header>محاسبه ی آنلاین مالیات بر ارزش افزوده</header>
-    <ul>
+    <header>ابزار محاسبات آنلاین</header>
+    <!-- <ul>
       <li><a class="navbarlinks" href="VAT.html">صفحه اصلی</a></li>
       <li><a class="navbarlinks" href="#VAT"> مالیات بر ارزش افزوده </a></li>
-    </ul>
-    <div class="container" id="VAT">
-      <div class="innercontainer">
-        <label> *مبلغ را به تومان وارد کنید*</label>
-        <input
-          type="text"
-          placeholder="مبلغ  قبل از تخفیف را وارد کنید"
-          id="amount"
-        />
-        <button onclick="valueAddedTax()">محاسبه کن</button>
-        <p id="demo1"></p>
-        <p id="demo2"></p>
-        <p class="warning">کلیه مبالغ به تومان می باشد.</p>
+    </ul> -->
+    <div class="d-flex align-items-start">
+      <div
+        class="nav flex-column nav-pills me-3"
+        id="v-pills-tab"
+        role="tablist"
+        aria-orientation="vertical"
+      >
+        <button
+          class="nav-link active"
+          id="v-pills-home-tab"
+          data-bs-toggle="pill"
+          data-bs-target="#v-pills-home"
+          type="button"
+          role="tab"
+          aria-controls="v-pills-home"
+          aria-selected="true"
+        >
+          خانه
+        </button>
+        <button
+          class="nav-link"
+          id="v-pills-profile-tab"
+          data-bs-toggle="pill"
+          data-bs-target="#v-pills-profile"
+          type="button"
+          role="tab"
+          aria-controls="v-pills-profile"
+          aria-selected="false"
+        >
+          ارزش افزوده
+        </button>
+        <button
+          class="nav-link"
+          id="v-pills-messages-tab"
+          data-bs-toggle="pill"
+          data-bs-target="#v-pills-messages"
+          type="button"
+          role="tab"
+          aria-controls="v-pills-messages"
+          aria-selected="false"
+        >
+          شعاع دایره
+        </button>
+        <button
+          class="nav-link"
+          id="v-pills-settings-tab"
+          data-bs-toggle="pill"
+          data-bs-target="#v-pills-settings"
+          type="button"
+          role="tab"
+          aria-controls="v-pills-settings"
+          aria-selected="false"
+        >
+          BMI
+        </button>
+      </div>
+      <div class="tab-content" id="v-pills-tabContent">
+        <div
+          class="tab-pane fade show active"
+          id="v-pills-home"
+          role="tabpanel"
+          aria-labelledby="v-pills-home-tab"
+        ></div>
+        <div
+          class="tab-pane fade"
+          id="v-pills-profile"
+          role="tabpanel"
+          aria-labelledby="v-pills-profile-tab"
+        >
+          <div class="container" id="VAT">
+            <div class="innercontainer">
+              <label> *مبلغ را به تومان وارد کنید*</label>
+              <input
+                type="text"
+                placeholder="مبلغ  قبل از تخفیف را وارد کنید"
+                id="amount"
+              />
+              <button onclick="valueAddedTax()">محاسبه کن</button>
+              <p id="demo1"></p>
+              <p id="demo2"></p>
+              <p class="warning">کلیه مبالغ به تومان می باشد.</p>
+            </div>
+          </div>
+        </div>
+        <div
+          class="tab-pane fade"
+          id="v-pills-messages"
+          role="tabpanel"
+          aria-labelledby="v-pills-messages-tab"
+        >
+          ...
+        </div>
+        <div
+          class="tab-pane fade"
+          id="v-pills-settings"
+          role="tabpanel"
+          aria-labelledby="v-pills-settings-tab"
+        >
+          ...
+        </div>
       </div>
     </div>
+
     <footer>کلیه حقوق این سایت برای شرکت ... محفوظ است.</footer>
-    <script>
-      function valueAddedTax() {
-        var value = document.getElementById("amount").value;
-        var tax = 0.09;
-        var vat = Number(value) * tax;
-        var finalPrice = vat + Number(value);
-        document.getElementById("demo1").innerHTML =
-          " مالیات بر ارزش افزوده کل = " + vat;
-        document.getElementById("demo2").innerHTML =
-          " مبلغ نهایی بعد از مالیات بر ارزش افزوده کل = " + finalPrice;
-      }
-    </script>
+    <script src="script.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
