added IF document

--- a/JavaScript/BMI.html
+++ b/JavaScript/BMI.html
@@ -15,10 +15,17 @@
 
     <script>
       function getData() {
-        var height = document.getElementById("height").value;
-        var weight = document.getElementById("weight").value;
-        var bmi = calcBmi(height, weight);
-        document.getElementById("bmi").innerHTML = bmi;
+        let height = document.getElementById("height").value;
+        let weight = document.getElementById("weight").value;
+        let bmi = calcBmi(height, weight);
+        // document.getElementById("bmi").innerHTML = bmi;
+        if (bmi <= 25) {
+          document.getElementById("bmi").innerHTML =
+            "Your BMI is okay,maintain your weight!" + bmi;
+        } else {
+          document.getElementById("bmi").innerHTML =
+            "You are overweight, decrease your weight ASAP!" + bmi;
+        }
       }
 
       function calcBmi(height, weight) {
