added radius into calculating site but its not finished yet

--- a/JavaScript/Calculating Site/Calcsite.html
+++ b/JavaScript/Calculating Site/Calcsite.html
@@ -116,7 +116,14 @@
           role="tabpanel"
           aria-labelledby="v-pills-messages-tab"
         >
-          ...
+          <div class="container">
+            <div class="innercontainer">
+              <input id="fee" />
+              <button type="button" onclick="calcArea()">Click!</button>
+              <button type="button" onclick="getData()">get data</button>
+              <p id="demo3"></p>
+            </div>
+          </div>
         </div>
         <div
           class="tab-pane fade"
